; ModuleID = '/home/carl/AnghaBench/linux/sound/core/seq/extr_seq_fifo.c_snd_seq_fifo_cell_putback.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/seq/extr_seq_fifo.c_snd_seq_fifo_cell_putback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_seq_fifo = type { i32, i32, %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell* }
%struct.snd_seq_event_cell = type { %struct.snd_seq_event_cell* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_seq_fifo_cell_putback(%struct.snd_seq_fifo* %0, %struct.snd_seq_event_cell* %1) #0 {
  %3 = alloca %struct.snd_seq_fifo*, align 8
  %4 = alloca %struct.snd_seq_event_cell*, align 8
  %5 = alloca i64, align 8
  store %struct.snd_seq_fifo* %0, %struct.snd_seq_fifo** %3, align 8
  store %struct.snd_seq_event_cell* %1, %struct.snd_seq_event_cell** %4, align 8
  %6 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %4, align 8
  %7 = icmp ne %struct.snd_seq_event_cell* %6, null
  br i1 %7, label %8, label %38

8:                                                ; preds = %2
  %9 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %10 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %9, i32 0, i32 0
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %14 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %13, i32 0, i32 3
  %15 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %14, align 8
  %16 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %4, align 8
  %17 = getelementptr inbounds %struct.snd_seq_event_cell, %struct.snd_seq_event_cell* %16, i32 0, i32 0
  store %struct.snd_seq_event_cell* %15, %struct.snd_seq_event_cell** %17, align 8
  %18 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %4, align 8
  %19 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %20 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %19, i32 0, i32 3
  store %struct.snd_seq_event_cell* %18, %struct.snd_seq_event_cell** %20, align 8
  %21 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %22 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %21, i32 0, i32 2
  %23 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %22, align 8
  %24 = icmp ne %struct.snd_seq_event_cell* %23, null
  br i1 %24, label %29, label %25

25:                                               ; preds = %8
  %26 = load %struct.snd_seq_event_cell*, %struct.snd_seq_event_cell** %4, align 8
  %27 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %28 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %27, i32 0, i32 2
  store %struct.snd_seq_event_cell* %26, %struct.snd_seq_event_cell** %28, align 8
  br label %29

29:                                               ; preds = %25, %8
  %30 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %31 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 4
  %34 = load %struct.snd_seq_fifo*, %struct.snd_seq_fifo** %3, align 8
  %35 = getelementptr inbounds %struct.snd_seq_fifo, %struct.snd_seq_fifo* %34, i32 0, i32 0
  %36 = load i64, i64* %5, align 8
  %37 = call i32 @spin_unlock_irqrestore(i32* %35, i64 %36)
  br label %38

38:                                               ; preds = %29, %2
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
